@@ -8,7 +8,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --aux-dir=. --avoid=xalloc-die --macro-prefix=gl base64 c-ctype getopt getpass gettext md5 socklen sysexits xalloc xvasprintf
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --aux-dir=. --avoid=xalloc-die --macro-prefix=gl base64 c-ctype getopt getpass gettext hmac-md5 md5 socklen sysexits xalloc xvasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits no-dependencies
 
@@ -136,6 +136,18 @@ sysexits.h: sysexit_.h
 MOSTLYCLEANFILES += sysexits.h sysexits.h-t
 
 ## end   gnulib module sysexits
+
+## begin gnulib module unistd
+
+BUILT_SOURCES += $(UNISTD_H)
+
+# We need the following in order to create an empty placeholder for
+# <unistd.h> when the system doesn't have one.
+unistd.h:
+	echo '/* Empty placeholder for $@.  */' >$@
+MOSTLYCLEANFILES += unistd.h
+
+## end   gnulib module unistd
 
 ## begin gnulib module vasnprintf
 
