@@ -1,4 +1,4 @@
-# sys_socket_h.m4 serial 1
+# sys_socket_h.m4 serial 2
 dnl Copyright (C) 2005, 2006 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
@@ -12,7 +12,11 @@ AC_DEFUN([gl_HEADER_SYS_SOCKET],
   if test $ac_cv_header_sys_socket_h = yes; then
     SYS_SOCKET_H=''
   else
-    AC_CHECK_HEADERS_ONCE([winsock2.h ws2tcpip.h])
+    dnl We cannot use AC_CHECK_HEADERS_ONCE here, because that would make
+    dnl the check for those headers unconditional; yet cygwin reports
+    dnl that the headers are present but cannot be compiled (since on
+    dnl cygwin, all socket information should come from sys/socket.h).
+    AC_CHECK_HEADERS([winsock2.h ws2tcpip.h])
     SYS_SOCKET_H='sys/socket.h'
   fi
   AC_SUBST(SYS_SOCKET_H)
