@@ -1,4 +1,5 @@
 Version 1.0.0 (not yet released):
+- Gnulib update. Add hmac-md5 module.
 - net.c, tls.c: allow all network operations to be interrupted with CTRL+C,
   and print an appropriate error message in this case.
 - tls.c: if an error occurs, clean up *after* building the error message. This
